# c4droid

./: README.md  qthelloworld.cpp
NumCxx/: main.cpp
NumCxx/NcArray/: NcArray.h  NcArray.inl
NumCxx/linalg/: linalg.h
Qt_project/Chess/: Board.cpp  Board.h  CMakeLists.txt  Stone.cpp  Stone.h  chess.pro  main.cpp
Qt_project/test001/: qthelloworld.cpp  qthelloworld.pro
SDL_project/saolei/: cell.cpp  cell.h  draw.cpp  draw.h  main.cpp
SDL_project/test001/: test.cpp
SDL_project/test002/: CMakeLists.txt  test.cpp
SDL_project/test003/: test.cpp
SDL_project/test004/: CMakeLists.txt  test.cpp
